# rusty-relay

./: .clippy.toml  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  renovate.json
.github/workflows/: audit.yml  workflow.yml
crates/relay-client/: Cargo.toml  README.md
crates/relay-client/src/: cli.rs  error.rs  main.rs  proxy.rs  tls.rs  version.rs  webhook.rs  websocket.rs
crates/relay-messages/: Cargo.toml  README.md
crates/relay-messages/src/: lib.rs
crates/relay-server/: Cargo.toml  README.md
crates/relay-server/src/: catch_all.rs  error.rs  health.rs  main.rs  proxy.rs  state.rs  tls.rs  util.rs  webhook.rs  websocket.rs
crates/relay-shared/: Cargo.toml  README.md
crates/relay-shared/src/: lib.rs
formula/: template.rb
scripts/: install.sh
