[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
axum = { version = "0.8.6", features = ["ws"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
clap = { version = "4.5.50", features = ["derive"] }
futures-util = "0.3.31"