[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
