[package]
name = "rusty-relay-client"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
clap = { version = "4.5.50", features = ["derive"] }
futures-util = "0.3.31"
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }