[package]
name = "rusty-relay-messages"
version = "0.0.0"
edition = "2024"
authors = ["Lars Kniep <larskniep@gmail.com>"]
description = "Messages library for the rusty-relay client and server"
license = "MIT"
repository = "https://github.com/larscom/rusty-relay"
readme = "README.md"

[dependencies]
serde = { workspace = true }