[package]
name = "rusty-relay-server"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
axum-server = { version = "0.7.2", default-features = false, features = [
  "tls-rustls-no-provider",
] }
tokio-stream = "0.1.17"
moka = { version = "0.12.11", features = ["future"] }
nanoid = "0.4.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
