[package]
name = "rusty-relay-server"
version = "0.0.0"
edition = "2024"
authors = ["Lars Kniep <larskniep@gmail.com>"]
description = "The http server for rusty-relay"
license = "MIT OR Apache-2.0"
repository = "https://github.com/larscom/rusty-relay"
readme = "README.md"
keywords = ["server", "proxy", "relay", "rest", "webhooks"]
categories = ["development-tools"]

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
axum-server = { version = "0.7.2", default-features = false, features = [
  "tls-rustls-no-provider",
] }
axum-extra = { version = "0.12.1", features = ["cookie"] }
tokio-stream = "0.1.17"
moka = { version = "0.12.11", features = ["future"] }
nanoid = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
regex = "1.12.2"
rusty-relay-messages = { path = "../relay-messages" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
