[package]
name = "rusty-relay-server"
version = "0.0.0"
edition = "2024"
authors = ["Lars Kniep <larskniep@gmail.com>"]
description = "The http server for rusty-relay"
license = "MIT"
repository = "https://github.com/larscom/rusty-relay"
readme = "README.md"
keywords = ["server", "proxy", "relay", "rest", "webhooks"]
categories = ["development-tools"]

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
axum-server = { version = "0.7.3", default-features = false, features = [
    "tls-rustls-no-provider",
] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
tokio-stream = "0.1.17"
nanoid = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.21"
regex = "1.12.2"
rusty-relay-messages = { path = "../relay-messages" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
